// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Preview 1`] = `
<ds-error-summary>
  <h2>
    For å gå videre må du rette opp følgende feil:
  </h2>
  <ul>
    <li>
      <a
        data-color="neutral"
        href="#"
      >
        Fødselsdato kan ikke være etter år 2005
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#"
      >
        Telefonnummer kan kun inneholde siffer
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#"
      >
        E-post må være gyldig
      </a>
    </li>
  </ul>
</ds-error-summary>
`;

exports[`Show Hide 1`] = `
<button
  data-variant="primary"
  type="button"
>
  Skjul feilmelding
</button>
<ds-error-summary
  aria-labelledby="mnsry0t023z5"
  tabindex="-1"
>
  <h2 id="mnsry0t023z5">
    For å gå videre må du rette opp følgende feil:
  </h2>
  <ul>
    <li>
      <a
        data-color="neutral"
        href="#fornavn"
      >
        Fornavn må være minst 2 tegn
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#telefon"
      >
        Telefonnummer kan kun inneholde siffer
      </a>
    </li>
  </ul>
</ds-error-summary>
`;

exports[`With Form 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="fornavn"
  >
    Fornavn
  </label>
  <div>
    <input
      aria-invalid="true"
      id="fornavn"
      type="text"
      aria-describedby="mnsry0t023z2"
    >
  </div>
  <p
    data-field="validation"
    id="mnsry0t023z2"
  >
    Fornavn må være minst 2 tegn
  </p>
</ds-field>
<ds-field>
  <label
    data-weight="medium"
    for="telefon"
  >
    Telefon
  </label>
  <div>
    <input
      aria-invalid="true"
      id="telefon"
      type="tel"
      aria-describedby="mnsry0t023z3"
    >
  </div>
  <p
    data-field="validation"
    id="mnsry0t023z3"
  >
    Telefonnummer kan kun inneholde siffer
  </p>
</ds-field>
<ds-error-summary>
  <h2>
    For å gå videre må du rette opp følgende feil:
  </h2>
  <ul>
    <li>
      <a
        data-color="neutral"
        href="#fornavn"
      >
        Fornavn må være minst 2 tegn
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#telefon"
      >
        Telefonnummer kan kun inneholde siffer
      </a>
    </li>
  </ul>
</ds-error-summary>
`;
